# riva-asrlib-decoder

./: .bazelrc  .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  CLASS_LM.md  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  WORKSPACE  cibuildwheel.sh  pyproject.toml  setup.py
egs/: evaluate_nemo_wfst.py  requirements_libs.txt
include/base/: version.h
include/matrix/: cblas-wrappers.h
include/riva/asrlib/: cuda_helpers.h
include/riva/asrlib/decoder/: acoustic_model.h  batched-mapped-decoder-cuda.h  batched-mapped-online-decoder-cuda.h  ctc_transition_information.h  pybind11_dlpack_caster.h
src/riva/asrlib/decoder/: batched-mapped-decoder-cuda.cc  config.py  ctc_transition_information.cc  python_decoder.cc  test_decoder.py  test_graph_construction.py
src/riva/asrlib/decoder/scripts/prepare_TLG_fst/: .gitignore  abbr_normalization.py  arpa2wordlist.py  expand_grammarfst.py  extend_g_fst.py  gen_lexicon.py  lexicon_from_arpa.py  mkgraph_ctc.sh  mkgraph_ctc_classlm.sh  path.sh  prep_subw_lexicon.sh
src/riva/asrlib/decoder/scripts/prepare_TLG_fst/local/: add_lm_disambig.py  ctc_compact_token_fst.py  ctc_compile_dict_token.sh  ctc_eesen_token_fst.py  ctc_token_fst.py  identity_token_fst.py  make_ctc_alignment_graphs.sh  parse_options.sh  prepare_dict_ctc.sh  subw_tokenize_text.py
src/riva/asrlib/decoder/scripts/prepare_TLG_fst/utils/: add_word_disambig.py  make_lexicon_fst.pl  map_arpa_lm.pl
src/riva/asrlib/decoder/test_data/: TLG.fst  logits.ark  word_boundary.int  words.txt
