[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.25",
    "ninja",
    "nanobind>=1.1.0",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "{cp38-manylinux_x86_64,cp39-manylinux_x86_64,cp310-manylinux_x86_64,cp311-manylinux_x86_64}"
# Need to set the pythonLocation environment variable manually becase CMake picks up /usr/bin/python3.6 no matter what otherwise
# https://cmake.org/cmake/help/latest/prop_tgt/CUDA_ARCHITECTURES.html#prop_tgt:CUDA_ARCHITECTURES
environment = 'RIVA_ASRLIB_DECODER_CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Release" CUDAARCHS="52-real;60-real;61-real;70-real;75-real;80-real;86" pythonLocation="$(readlink -f $(which python))/.."'
# nemo_toolkit[asr] depends upon Cython having already been installed because
# it uses setup.py, not pyproject.toml
# before-test = "pip install Cython"
# test-command = "pytest -k 'not throughput' {project}/src/riva/asrlib/decoder/"
# test-requires = ["pytest", "kaldi-io", "more-itertools", "nemo_toolkit[asr]", "torchaudio"]
# 3.11 fails becasue of numba: Cannot install on Python version 3.11.1; only versions >=3.7,<3.11 are supported
test-skip = "cp311-manylinux_x86_64"
